bpo-45654: freeze runpy module